Iconise Spartacus headers

--- a/plugins/index.html
+++ b/plugins/index.html
@@ -79,7 +79,7 @@
         <div class="col">
             <div class="col-menu__wrapper col-menu__wrapper--spartacus">
                 <nav class="col-menu col-menu-spartacus" role="navigation" aria-label="Spartacus Plugins sidebar list">
-                    <h3>Spartacus</h3>
+                    <h3><span class="icon-s">Ⓢ</span><span class="hidden">S</span>partacus</h3>
                     <ul>
                         <li><a href="../themes">Themes</a></li>
                         <li>&nbsp;</li>
@@ -127,7 +127,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper--spartacus">
                 <div class="col-document">
-                  <h1>Styx Spartacus: Additional Plugins</h1>
+                  <h1>Styx <span class="icon-s">Ⓢ</span><span class="hidden">S</span>partacus: Additional Plugins</h1>
                   <p><strong>SPARTACUS</strong> stands for <em>Serendipity Plugin Access Repository Tool And Customization/Unification System</em></p>
                   <p><span>[<strong>S</strong>]erendipity [<strong>P</strong>]lugin [<strong>A</strong>]ccess [<strong>R</strong>]epository [<strong>T</strong>]ool [<strong>A</strong>]nd [<strong>C</strong>]ustomization/[<strong>U</strong>]nification [<strong>S</strong>]ystem</span></p>
                   <p><strong>Styx Spartacus</strong> does <strong>only</strong> support the GIT repository, which currently isn’t able to <strong>tar/zip</strong> a subfolder (plugin) on demand for you. Therefore the download link is set inactive here. Please use the built-in <a href="/hc/en/faq/#docs-what-is-spartacus-how-do-i-install-spartacus">Spartacus plugin</a> to install plugin sources, or clone/download the <a href="https://github.com/ophian/additional_plugins" title="GitHub Serendipity Plugins">additional_plugins</a> repository and copy the subdir you want to install in your blog as a plugin. Please follow the provided links.</p>
