--- a/themes/index.html
+++ b/themes/index.html
@@ -79,7 +79,7 @@
         <div class="col">
             <div class="col-menu__wrapper col-menu__wrapper--spartacus">
                 <nav class="col-menu col-menu-spartacus" role="navigation" aria-label="Spartacus Themes sidebar list">
-                    <h3>Spartacus</h3>
+                    <h3><span class="icon-s">Ⓢ</span><span class="hidden">S</span>partacus</h3>
                     <ul>
                         <li><a href="../plugins">Plugins</a></li>
                         <li>&nbsp;</li>
@@ -227,7 +227,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper--spartacus">
                 <div id="all" class="col-document">
-                    <h1>Styx Spartacus: Themes</h1>
+                    <h1>Styx <span class="icon-s">Ⓢ</span><span class="hidden">S</span>partacus: Themes</h1>
                     <p><strong>SPARTACUS</strong> stands for <em>Serendipity Plugin Access Repository Tool And Customization/Unification System</em></p>
                     <p><span>[<strong>S</strong>]erendipity [<strong>P</strong>]lugin [<strong>A</strong>]ccess [<strong>R</strong>]epository [<strong>T</strong>]ool [<strong>A</strong>]nd [<strong>C</strong>]ustomization/[<strong>U</strong>]nification [<strong>S</strong>]ystem</span></p>
                     <p>There is no own generated Styx Spartacus Themes Webpage, since Styx does not host additional themes. Please follow the provided links, which, except for the core themes, lead to S9y-Origin.</p>
