faq: Point to plugin API content - followup of 8d3d848

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -771,6 +771,8 @@ function styx_my_custom_function($params, $template) {
 
     <p>The second and often the best way is to create your own Serendipity plugins that deal with content. You can then access them with <code>{serendipity_hookPlugin …}</code> Smarty calls.</p>
     
+    <p>Please read all about <a href="https://ophian.github.io/hc/en/plugin-api.html">creating plugins</a> in detail here.</p>
+
     <li id="docs-extend-the-smarty-plugin-system">Extend the Smarty plugin system</li>
 
     <p>The third alternate is to create additional Smarty plugins as filters, modifiers, or functions. You can then access them with <code>{myCustomSmartyExtendPluginFunction(…)}</code> Smarty calls.</p>
