faq: Fix popfetcher link

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -833,7 +833,7 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
 <h4 id="docs-popfetcher-posting-new-entries-by-email">POPfetcher: Posting new entries by email</h4>
 
 <div>
-    <p>Serendipity’s <a href="/plugins/spartacus/additional_plugins/serendipity_event_popfetcher.zip">POPfetcher plugin</a> allows you to post new entries just by emailing them to your blog!</p>
+    <p>Serendipity’s <a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_popfetcher" target="_blank">POPfetcher plugin</a> allows you to post new entries just by emailing them to your blog!</p>
 
     <p>First, get yourself an email account only for adding blog entries. Either you can create a mail adress on your hosting server, or use a free POP3 service like hotmail.com or Gmail. Let’s pretend you picked up <code>john@example.org</code>.</p>
 
