--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -1,6 +1,6 @@
 <section id="sbgroup_BACKEND_USERMANAGEMENT" class="spartacus-group">
     <h3>Backend: Usermanagement</h3>
-    <div class="plugin">
+    <div id="serendipity_plugin_adduser" class="plugin">
         <h4 class="plugin_summary">User Self-Registration</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_adduser</dt>
@@ -20,7 +20,7 @@
 
 <section id="sbgroup_FRONTEND_ENTRY_RELATED" class="spartacus-group">
     <h3>Frontend: Entry Related</h3>
-    <div class="plugin">
+    <div id="serendipity_plugin_freetag" class="plugin">
         <h4 class="plugin_summary">Show tagged entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_freetag</dt>
@@ -40,7 +40,7 @@
 
 <section id="sbgroup_FRONTEND_EXTERNAL_SERVICES" class="spartacus-group">
     <h3>Frontend: External Services</h3>
-    <div class="plugin">
+    <div id="serendipity_plugin_amazon" class="plugin">
         <h4 class="plugin_summary">Amazon Recommendations</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_amazon</dt>
@@ -56,7 +56,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_creativecommons" class="plugin">
         <h4 class="plugin_summary">Creative Commons</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_creativecommons</dt>
@@ -71,7 +71,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_externalphp" class="plugin">
         <h4 class="plugin_summary">External PHP Application</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_externalphp</dt>
@@ -86,7 +86,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_feedburnersidebar" class="plugin">
         <h4 class="plugin_summary">Feedburner Sidebar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_feedburnersidebar</dt>
@@ -101,7 +101,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_flickrbadge" class="plugin">
         <h4 class="plugin_summary">Flickr badge</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickrbadge</dt>
@@ -117,7 +117,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_ggopis" class="plugin">
         <h4 class="plugin_summary">Gadu-Gadu IM status description</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_ggopis</dt>
@@ -133,7 +133,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_geotag" class="plugin">
         <h4 class="plugin_summary">Geotag Google/OSM Map</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_geotag</dt>
@@ -149,7 +149,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_pagerank" class="plugin">
         <h4 class="plugin_summary">Google PageRank</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_pagerank</dt>
@@ -165,7 +165,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_google_quicksearch" class="plugin">
         <h4 class="plugin_summary">Google Quicksearch</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_google_quicksearch</dt>
@@ -180,7 +180,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_heavyrotation" class="plugin">
         <h4 class="plugin_summary">On »Heavy Rotation«</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_heavyrotation</dt>
@@ -196,7 +196,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_piwik" class="plugin">
         <h4 class="plugin_summary">Piwik</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_piwik</dt>
@@ -212,7 +212,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_randomquotes" class="plugin">
         <h4 class="plugin_summary">Random Quotes</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_randomquotes</dt>
@@ -227,7 +227,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_shoutcast" class="plugin">
         <h4 class="plugin_summary">Shoutcast</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_shoutcast</dt>
@@ -242,7 +242,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_socialbookmarks" class="plugin">
         <h4 class="plugin_summary">Social Bookmarks Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_socialbookmarks</dt>
@@ -257,7 +257,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_wikipedia_finder" class="plugin">
         <h4 class="plugin_summary">Wikipedia Finder</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_wikipedia_finder</dt>
@@ -272,7 +272,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_flickr" class="plugin">
         <h4 class="plugin_summary">flickr Photostream</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickr</dt>
@@ -292,7 +292,7 @@
 
 <section id="sbgroup_FRONTEND_FEATURES" class="spartacus-group">
     <h3>Frontend: Features</h3>
-    <div class="plugin">
+    <div id="serendipity_plugin_loginform" class="plugin">
         <h4 class="plugin_summary">Authors login</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_loginform</dt>
@@ -308,7 +308,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_linklist" class="plugin">
         <h4 class="plugin_summary">Link List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_linklist</dt>
@@ -324,7 +324,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_mycalendar" class="plugin">
         <h4 class="plugin_summary">My Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_mycalendar</dt>
@@ -340,7 +340,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_quicklink" class="plugin">
         <h4 class="plugin_summary">Quick Link</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_quicklink</dt>
@@ -355,7 +355,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_shoutbox" class="plugin">
         <h4 class="plugin_summary">Shoutbox</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_shoutbox</dt>
@@ -370,7 +370,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_sidebarlogo" class="plugin">
         <h4 class="plugin_summary">SideBar Logo</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_sidebarlogo</dt>
@@ -385,7 +385,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_timezones" class="plugin">
         <h4 class="plugin_summary">Timezones</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_timezones</dt>
@@ -400,7 +400,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_microformats" class="plugin">
         <h4 class="plugin_summary">Upcoming Events</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_microformats</dt>
@@ -420,7 +420,7 @@
 
 <section id="sbgroup_FRONTEND_VIEWS" class="spartacus-group">
     <h3>Frontend: Views</h3>
-    <div class="plugin">
+    <div id="serendipity_plugin_google_adsense" class="plugin">
         <h4 class="plugin_summary">AdSense</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_google_adsense</dt>
@@ -436,7 +436,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_userprofiles_birthdays" class="plugin">
         <h4 class="plugin_summary">Birthdays of users</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_userprofiles_birthdays</dt>
@@ -452,7 +452,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_category_dhtml_menu" class="plugin">
         <h4 class="plugin_summary">Category Tree Menu</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_category_dhtml_menu</dt>
@@ -467,7 +467,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_multilingual" class="plugin">
         <h4 class="plugin_summary">Choose Language</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_multilingual</dt>
@@ -483,7 +483,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_currently" class="plugin">
         <h4 class="plugin_summary">Currently...</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_currently</dt>
@@ -499,7 +499,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_faq" class="plugin">
         <h4 class="plugin_summary">FAQs Category Chooser</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_faq</dt>
@@ -515,7 +515,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_guestbook" class="plugin">
         <h4 class="plugin_summary">Guestbook Sidebar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_guestbook</dt>
@@ -531,7 +531,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_nugget_multilingual" class="plugin">
         <h4 class="plugin_summary">Language-Specific HTML Nugget</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_nugget_multilingual</dt>
@@ -547,7 +547,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_userprofiles" class="plugin">
         <h4 class="plugin_summary">Serendipity Authors</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_userprofiles</dt>
@@ -563,7 +563,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_showentries" class="plugin">
         <h4 class="plugin_summary">Show Entries in sidebar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_showentries</dt>
@@ -579,7 +579,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_xsstrust" class="plugin">
         <h4 class="plugin_summary">Show trusted users</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_xsstrust</dt>
@@ -598,7 +598,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_staticpage" class="plugin">
         <h4 class="plugin_summary">Static Page List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_staticpage</dt>
@@ -614,7 +614,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_templatedropdown" class="plugin">
         <h4 class="plugin_summary">Theme dropdown</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_templatedropdown</dt>
@@ -629,7 +629,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_twitter" class="plugin">
         <h4 class="plugin_summary">Twitter Timeline</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_twitter</dt>
@@ -649,7 +649,7 @@
 
 <section id="sbgroup_IMAGES" class="spartacus-group">
     <h3>Images</h3>
-    <div class="plugin">
+    <div id="serendipity_plugin_coppermine" class="plugin">
         <h4 class="plugin_summary">Coppermine Thumbnails</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_coppermine</dt>
@@ -664,7 +664,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_photoblog" class="plugin">
         <h4 class="plugin_summary">Photoblog Entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_photoblog</dt>
@@ -679,7 +679,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_imagesidebar" class="plugin">
         <h4 class="plugin_summary">Unified Sidebar Image Display</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_imagesidebar</dt>
@@ -695,7 +695,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_flickr" class="plugin">
         <h4 class="plugin_summary">flickr Photostream</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickr</dt>
@@ -715,7 +715,7 @@
 
 <section id="sbgroup_STATISTICS" class="spartacus-group">
     <h3>Statistics</h3>
-    <div class="plugin">
+    <div id="serendipity_plugin_communityrating" class="plugin">
         <h4 class="plugin_summary">Average Rating</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_communityrating</dt>
@@ -731,7 +731,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_karmaranking" class="plugin">
         <h4 class="plugin_summary">Karma Ranking</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_karmaranking</dt>
@@ -746,7 +746,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_pollbox" class="plugin">
         <h4 class="plugin_summary">Polls</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_pollbox</dt>
@@ -762,7 +762,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_popularentries" class="plugin">
         <h4 class="plugin_summary">Popular Entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_popularentries</dt>
@@ -778,7 +778,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_spamblock_bee" class="plugin">
         <h4 class="plugin_summary">Spam Report</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_spamblock_bee</dt>
@@ -794,7 +794,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_statistics" class="plugin">
         <h4 class="plugin_summary">Statistics</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_statistics</dt>
@@ -810,7 +810,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_topexits" class="plugin">
         <h4 class="plugin_summary">Top Exits</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_topexits</dt>
@@ -825,7 +825,7 @@
         </ul>
     </div>
 
-    <div class="plugin">
+    <div id="serendipity_plugin_topreferrers" class="plugin">
         <h4 class="plugin_summary">Top Referrers</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_topreferrers</dt>
