--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -70,8 +70,8 @@
         <h4 class="plugin_summary">Recaptcha</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_recaptcha</dt>
-            <dd class="plugin_version">Version 0.31 (GPL, Last Updated 2017-02-05)</dd>
-            <dd class="plugin_maintainers">Christian Brabandt (based on work of Garvin Hicking, Sebastian Nohn), Garvin</dd>
+            <dd class="plugin_version">Version 0.32 (GPL, Last Updated 2018-03-24)</dd>
+            <dd class="plugin_maintainers">Christian Brabandt (based on work of Garvin Hicking, Sebastian Nohn), Garvin, @th-h, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Enabling a recaptcha for commenting articles (You need to apply for a key)</p>
