--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1492,7 +1492,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.71 (GPL, Last Updated 2018-02-12)</dd>
+            <dd class="plugin_version">Version 1.72 (GPL, Last Updated 2018-03-25)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1704,7 +1704,7 @@
         <h4 class="plugin_summary">Newsbox</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_newsbox</dt>
-            <dd class="plugin_version">Version 1.0 (GPL, Last Updated 2017-11-02)</dd>
+            <dd class="plugin_version">Version 1.1 (GPL, Last Updated 2018-03-25)</dd>
             <dd class="plugin_maintainers">Jude Anthony, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1712,6 +1712,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_newsbox.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_newsbox">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_newsbox/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -1849,7 +1850,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.71 (GPL, Last Updated 2018-02-12)</dd>
+            <dd class="plugin_version">Version 1.72 (GPL, Last Updated 2018-03-25)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2045,7 +2046,7 @@
         <h4 class="plugin_summary">Newsbox</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_newsbox</dt>
-            <dd class="plugin_version">Version 1.0 (GPL, Last Updated 2017-11-02)</dd>
+            <dd class="plugin_version">Version 1.1 (GPL, Last Updated 2018-03-25)</dd>
             <dd class="plugin_maintainers">Jude Anthony, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -2053,6 +2054,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_newsbox.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_newsbox">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_newsbox/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
